# SoftwareRender

./: CMakeLists.txt
src/: main.cpp
